[gd_scene load_steps=23 format=2]

[ext_resource path="res://PexelsQD/Main/TimeInput.gd" type="Script" id=1]
[ext_resource path="res://assets/nord.theme" type="Theme" id=2]
[ext_resource path="res://assets/icons/playback/fast-forward.svg" type="Texture" id=3]
[ext_resource path="res://PexelsQD/Main/StartPause.gd" type="Script" id=4]
[ext_resource path="res://PexelsQD/Main/Find.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/image-placeholder.svg" type="Texture" id=6]
[ext_resource path="res://PexelsQD/PexelsQD.gd" type="Script" id=7]
[ext_resource path="res://assets/pexels-logo-white.png" type="Texture" id=8]
[ext_resource path="res://assets/razcore-logo-white.png" type="Texture" id=9]
[ext_resource path="res://PexelsQD/Intro/PanelContainerIntro.gd" type="Script" id=12]
[ext_resource path="res://PexelsQD/Intro/LineEditApiKey.gd" type="Script" id=13]
[ext_resource path="res://assets/fonts/default_code.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/icons/playback/stop.svg" type="Texture" id=15]
[ext_resource path="res://assets/icons/playback/play.svg" type="Texture" id=16]
[ext_resource path="res://assets/icons/playback/skip-back.svg" type="Texture" id=17]
[ext_resource path="res://assets/icons/playback/rewind.svg" type="Texture" id=18]
[ext_resource path="res://assets/icons/playback/skip-forward.svg" type="Texture" id=19]
[ext_resource path="res://PexelsQD/Main/PanelContainerNotification.gd" type="Script" id=20]

[sub_resource type="StreamTexture" id=1]
flags = 4

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.231373, 0.258824, 0.321569, 1 )

[sub_resource type="Animation" id=3]
resource_name = "_"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade-out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PexelsQD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerMain" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainerControls" type="MarginContainer" parent="VBoxContainerMain"]
margin_right = 1024.0
margin_bottom = 39.0
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainerMain/MarginContainerControls"]
margin_right = 1024.0
margin_bottom = 34.0

[node name="LineEditSearch" type="LineEdit" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
margin_right = 848.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_length = 60
placeholder_text = "search: at least 3 characters"
script = ExtResource( 5 )

[node name="SpinBoxTimeInput" type="SpinBox" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
margin_left = 852.0
margin_right = 940.0
margin_bottom = 34.0
min_value = 5.0
max_value = 999.0
value = 5.0
rounded = true
suffix = "s"
script = ExtResource( 1 )

[node name="ButtonStartPause" type="Button" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
margin_left = 944.0
margin_right = 1024.0
margin_bottom = 34.0
rect_min_size = Vector2( 80, 0 )
disabled = true
toggle_mode = true
script = ExtResource( 4 )

[node name="TextureButtonSkipBack" type="TextureButton" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
visible = false
margin_left = 860.0
margin_right = 884.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 0 )
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="TextureButtonRewind" type="TextureButton" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
visible = false
margin_left = 888.0
margin_right = 912.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 0 )
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="TextureButtonPlayPause" type="TextureButton" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
visible = false
margin_left = 916.0
margin_right = 940.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 0 )
disabled = true
toggle_mode = true
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="TextureButtonStop" type="TextureButton" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
visible = false
margin_left = 944.0
margin_right = 968.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 0 )
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="TextureButtonFastForward" type="TextureButton" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
visible = false
margin_left = 972.0
margin_right = 996.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 0 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="TextureButtonSkipForward" type="TextureButton" parent="VBoxContainerMain/MarginContainerControls/HBoxContainer"]
visible = false
margin_left = 1000.0
margin_right = 1024.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 0 )
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainerMain"]
margin_top = 39.0
margin_right = 1024.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 5 )
percent_visible = false

[node name="MarginContainerImage" type="MarginContainer" parent="VBoxContainerMain"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="VBoxContainerMain/MarginContainerImage"]
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 546.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="PanelContainerIntro" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainerIntro"]
margin_left = 6.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 596.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerIntro/CenterContainer"]
self_modulate = Color( 0.705882, 0.556863, 0.678431, 1 )
margin_left = 72.0
margin_top = 203.0
margin_right = 940.0
margin_bottom = 389.0
custom_constants/separation = 24

[node name="HBoxContainer1" type="HBoxContainer" parent="PanelContainerIntro/CenterContainer/VBoxContainer"]
margin_right = 868.0
margin_bottom = 128.0
alignment = 1

[node name="TextureButtonRazcore" type="TextureButton" parent="PanelContainerIntro/CenterContainer/VBoxContainer/HBoxContainer1"]
margin_left = 176.0
margin_right = 304.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="TextureButtonPexels" type="TextureButton" parent="PanelContainerIntro/CenterContainer/VBoxContainer/HBoxContainer1"]
margin_left = 308.0
margin_right = 692.0
margin_bottom = 128.0
rect_min_size = Vector2( 384, 128 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainerIntro/CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 868.0
margin_bottom = 186.0

[node name="LineEditApiKey" type="LineEdit" parent="PanelContainerIntro/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 768.0
margin_bottom = 34.0
rect_min_size = Vector2( 768, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 14 )
align = 1
secret = true
placeholder_text = "Pexels API-KEY"
script = ExtResource( 13 )

[node name="ButtonNext" type="Button" parent="PanelContainerIntro/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 772.0
margin_right = 868.0
margin_bottom = 34.0
rect_min_size = Vector2( 96, 0 )
size_flags_horizontal = 8
text = "Next"
icon = SubResource( 1 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainerNotification" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 78.0
margin_top = -207.0
margin_right = -78.0
margin_bottom = -31.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
script = ExtResource( 20 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainerNotification"]
margin_left = 10.0
margin_right = 858.0
margin_bottom = 176.0
size_flags_vertical = 1
text = "NOTIFICATION AREA"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PanelContainerNotification"]
autoplay = "_"
anims/_ = SubResource( 3 )
anims/fade-out = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]
